Compiler/tests/typing/bad/testfile-redef-1.rs
fn foo(x: i32, x: bool) {}
fn main() { }
